[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
markdown_to_html = { path = "crates/markdown_to_html", version = "0.1.0" }
chrome_cookie = { path = "crates/chrome_cookie", version = "0.1.0" }
