[lib]
name = "markdown_to_html"
crate-type = ["cdylib"]

[package]
name = "markdown_to_html"
version = "0.1.0"
edition = "2021"

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"] 
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]

[dependencies]
mlua = { version = "0.11.1", features = ["module", "serialize"] }
pulldown-cmark = "0.13.0"
